--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -82,7 +82,7 @@ welche sowohl von \textit{km/h} als auch von \textit{km/(s*h)} verwendet wird.
 Die Referenz mit Exponent -1 auf \textit{h} wird ebenfalls von \textit{km/h} und \textit{km/(s*h)} genutzt. 
 Außerdem geht von \textit{km/(s*h)} aus noch eine Referenz mit Exponenten -1 auf \textit{s}. 
 Somit gibt es auf der Exemplarebene von der Einheit \textit{Beschleunigung} zwei Referenzen auf \textit{Zeit}-Einheiten. 
-Beim Summieren der Exponenten werden dann die auf der Typebene geforderten Exponenten -2 geliefert.
+Beim Summieren der Exponenten wird dann der auf der Typebene geforderte Exponent -2 geliefert.
 
 \subsubsubsection{Konsistenzbedingungen}
 
