--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -72,7 +72,7 @@ Objekte in ihm klassifiziert sind.
 \end{description}
 
 \textbf{Singletons} \newline
-Die Singleton-Eigenschaft eines atomaren Typen A bedeutet ausschließlich, dass genau ein Objekt existiert, dessen konkretester Typ A ist.
+Die Singleton-Eigenschaft eines atomaren Typen A bedeutet ausschließlich, dass genau ein Objekt existiert, dessen speziellster Typ A ist.
 Von Singletons darf beliebig abgeleitet werden. 
 In der \emph{initializeOnCreation}-Operation des atomaren Typen wird, falls er über die Singletoneigenschaft verfügt, 
 sein \emph{SingletonObject} erstellt. In der \emph{prepareForDeletion}-Operation wird - falls vorhanden - das \emph{SingeletonObject}
