--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -171,7 +171,7 @@ Dabei kann man zusammengesetzte Quantitäten als Vektoren auffassen, deren Eleme
 
 \subsubsubsection{Berechnungen und Vergleiche}\label{Berechnungen}
 
-img[width=\relWidth{1}]{quantity/subdiagram_quantity.png}{Quantitäten und Berechnungen}{quantity_and_calc}
+\img[width=\relWidth{1}]{quantity/subdiagram_quantity.png}{Quantitäten und Berechnungen}{quantity_and_calc}
 
 Die Addition, Subtraktion, Division und Multiplikation sind als Grundrechenarten (BasicCalculation) im Klassenmodell (s. Abbildung \refImg{quantity_and_calc} dargestellt. Man unterscheidet zwischen Grundrechenarten, die die Referenzen der Einheit verändern, und solchen, die dies nicht tun. Z.B. ergibt die Addition zweier Längenangaben (z.B. Meter) wieder eine Längenangabe. Also nennen wir eine solche Rechnung \emph{einheitstypbewahrend}. Im Klassenmodell ist diese Generalisierung als die Klasse \textit{UnitImutabCalc} zu erkennen. Im Gegensatz dazu ergibt z.B. die Multiplikation zweier Längenangaben eine Flächenangabe (z.B. Quadratmeter). Wir nennen diese Rechnungen \emph{einheitstypverändernd} - im Klassenmodell als \textit{UnitMutabCalc} zu sehen. Diese Implementierung besitzt Ansätze eines \emph{Kommando-Entwurfsmusters}.
 
