--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -1,11 +1,9 @@
 \subsection{Quantity}
-Die Klasse Quantity dient zur Angabe von einheitenbehafteten Werten. Jede Einheit ist dabei in einem Einheitentyp typisiert. Bei den Quantitäten gibt es atomare, die nur einen Wert mit einer Einheit besitzen, und zusammengesetzte, die einen Vektor atomarer Quantitäten mit unterschiedlichen Einheiten darstellen, wobei die Einheiten alle im selben Einheitentyp typisiert sein müssen.
+Die Klasse Quantity dient zur Angabe von einheitenbehafteten Werten. Jede Einheit ist dabei in einem Einheitentyp typisiert (siehe \refImg{klassendiagramm_quantity_complete}). Bei den Quantitäten gibt es atomare, die nur einen Wert mit einer Einheit besitzen, und zusammengesetzte, die einen Vektor atomarer Quantitäten mit unterschiedlichen Einheiten darstellen, wobei die Einheiten alle im selben Einheitentyp typisiert sein müssen.
 
-\TODO[Ausschnitt mit viewport einfügen, siehe Forum]
+\img[width=\relWidth{1}]{quantity/Ausschnitt_Quantity_Komplett.pdf}{Klassendiagramm - Ausschnitt Quantity}{klassendiagramm_quantity_complete}
 
-\subsubsection{Die Manager}
-
-\subsubsubsection{UnitTypeManager}
+\subsubsection{UnitTypeManager}
 
 Der UnitTypeManager beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht sichtbare Listen zur Verwaltung von Einheiten (Units) und Einheitentypen (UnitTypes).
 
@@ -16,7 +14,7 @@ Der UnitTypeManager beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht
 \item[Reference** refs] Hier werden alle Referenzen abgelegt, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheiten (CompoundUnits)
 \end{description}
 
-\subsubsubsection{FractionManager}\label{FractionManager}
+\subsubsection{FractionManager}\label{FractionManager}
 
 Der FractionManager verwaltet alle Brüche so, dass jede Rationale Zahl als Bruch nur einmal durchgekürzt (als \emph{Repräsentant}) vorkommt. Die Brüche werden durch ihre textuelle Repräsentation indiziert. Da dieser Index sehr schnell sehr groß werden kann, wird in der nächsten Ausbaustufe eine performantere Form der Indizierung gesucht.
 Über die Operation \textit{getFraction(key:String):Fraction} wird auf einen vorhandenen Bruch zugegriffen, wobei der Schlüssel die \textit{toString-Ausgabe} des Bruchs ist.
@@ -25,7 +23,7 @@ Durch ie Operation \textit{addFraction} wird ein neuer Bruch erzeugt und über d
 GOJA unterstütz keine 3-stelligen Assoziationen bei denen der Wert eines Wert-Schlüssel-Paares ein in GOJA primitiver Typ ist. Deswegen wurde die Klasse \textit{FractionWrapper} erstellt, die den Wert des Bruchs umhüllt. Somit wird das Problem umgangen: \texttt{FractionWrapper **String** managedFractions;}
 
 
-\subsubsubsection{QuantityManager}\label{QuantityManager}
+\subsubsection{QuantityManager}\label{QuantityManager}
 
 Der QuantityManager verwaltet die Zugriffe auf Quantitäten und ist die Schnittstelle zum Erstellen neuer Exemplare.
 Zudem wird der FractionManager als zentrale Fassade für das arithmetische und logische Operieren auf Quantitäten verwendet (siehe dazu Abschnitt \ref{Berechnungen}).
@@ -33,8 +31,12 @@ Zudem wird der FractionManager als zentrale Fassade für das arithmetische und l
 Beim Erstellen einer atomaren Quantität referenziert die \textit{amount}-Assoziation ein Fraction-Objekt aus dem FractionManager. Wird beim Anlegen der Quantität festgestellt, dass es diesen Bruch noch nicht gibt,
 wird er neu erstellt und in die Collection der verwalteten Brüche im FractionManager eingefügt.
 
-\subsubsection{Einheitentypen}
-Die Einheitentypen (UnitTypes) geben an, welche verschiedenen Einheiten fachlich zusammen gehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. In diesem Fall ist der Einheitentyp Währung und die beiden zugehörigen Einheiten sind Dollar und Euro. Bei Euro und Kilometer hingegen macht es wenig Sinn, diese zu Addieren oder zu Subtrahieren, denn das eine ist eine Währung und das andere eine Strecken-Angabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, wodurch dann zusammengesetzte Einheitentypen (CompoundUnitTypes) wie Geschwindigkeit (Strecke/Zeit) entstehen.
+\subsubsection{UnitTypes}
+\img[width=\relWidth{0.7}]{quantity/Ausschnitt_Unit.pdf}{Klassendiagramm - Ausschnitt Unit}{klassendiagramm_unit}
+Die Einheitentypen (UnitTypes, siehe auch \refImg{klassendiagramm_unit}) geben an, welche verschiedenen Einheiten fachlich zusammen gehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. 
+In diesem Fall ist der Einheitentyp Währung und die beiden zugehörigen Einheiten sind Dollar und Euro. Bei Euro und Kilometer hingegen macht es wenig Sinn, diese zu Addieren oder zu Subtrahieren, 
+denn das eine ist eine Währung und das andere eine Strecken-Angabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, 
+wodurch dann zusammengesetzte Einheitentypen (CompoundUnitTypes) wie Geschwindigkeit (Strecke/Zeit) entstehen.
 
 Zur Verwaltung von UnitTypes und CompoundUnitTypes stellt der UnitTypeManager 8 transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
 
@@ -63,8 +65,8 @@ Diese Operation ermittelt, ob es schon eine Referenz auf einen Einheitentyp mit 
 \end{description}
 
 
-\subsubsection{Einheiten}
-Fachlich gesehen können Einheiten (Units) von Quantitäten angenommen werden und sind in Einheitentypen typisiert.
+\subsubsection{Units}
+Fachlich gesehen können Einheiten (Units) von Quantitäten angenommen werden und sind in Einheitentypen typisiert (siehe \refImg{klassendiagramm_unit}).
 Dabei wird zwischen atomaren Einheiten (z.B. Meter [m]) und zusammengesetzten Einheiten (z.B. Kilometer pro Stunde [km/h]) unterschieden.
 
 \subsubsubsection{Objektmodell}
@@ -138,12 +140,17 @@ Mithilfe dieser Operation kann eine Referenz-Instanz mit einem gewissen Exponent
 
 \subsubsubsection{Conversions}\label{ConversionsKapitel} 
 
-Eine Conversion, also die Umrechnung von einer Unit zur entsprechend zum UnitType gehörigen DefaultUnit, kann über zwei Wege zustande kommen, bzw. verändert werden: Zum einen über die setConversion-Operation und zum anderen über die setDefaultUnit-Operation.
-Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede Conversion enthält also einen Faktor und eine Konstante (als Fraction), um der linearen Funktion m*x+b gerecht zu weden. Die Angabe von m und b hat folgende Semantik: y DefaultUnit = m * unitWert + b.
+\img[width=\relWidth{0.7}]{quantity/Ausschnitt_Conversion.pdf}{Klassendiagramm - Ausschnitt Conversion}{klassendiagramm_conversion}
+
+Eine Conversion, also die Umrechnung von einer Unit zur entsprechenden DefaultUnit eines UnitTypes, kann über zwei Wege zustande kommen, bzw. verändert werden: Zum einen über die setConversion-Operation und zum anderen über die setDefaultUnit-Operation.
+Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede Conversion enthält einen Faktor und eine Konstante vom Typ Fraction (siehe \refImg{klassendiagramm_conversion}), um der linearen Funktion $m*x+b$ gerecht zu werden. 
+Die Angabe von $m$ und $b$ hat folgende Semantik: 
+\[y (DefaultUnit) = m * unitWert + b\]
+
+
 Am Beispiel von Fahrenheit und Celsius lautet für Celsius die Conversion folgendermaßen, wenn Fahrenheit die DefaultUnit darstellt:
 
-\begin{equation} Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32
-\end{equation}
+\[Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32\]
 
 Mittels setConversion() wird eine bereits gesetzte Conversion für eine Unit überschrieben.
 Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notwendig, da diese ja in Abhängigkeit zu einer nun veralteten DefaultUnit angegeben wurden. Das betrifft alle Umrechnungen für Units zum selben UnitType wie die DefaultUnit.
@@ -158,7 +165,7 @@ Die entsprechende Konsistenzbedingung für diesen Fall lautet wie folgt:
 \forall ut \in UnitType : \forall f \in ut.defaultUnit.from^{-1}.myFunction: \\
 f.factor = 1 \wedge f.constant = 0 
 \end{split}
-\end{equation}
+\end{equation} 
 
 \subsubsection{Quantitäten}\label{Quantitaeten}
 
@@ -171,7 +178,7 @@ Dabei kann man zusammengesetzte Quantitäten als Vektoren auffassen, deren Eleme
 
 \subsubsubsection{Berechnungen und Vergleiche}\label{Berechnungen}
 
-\img[width=\relWidth{0.8}]{quantity/subdiagram_quantity.png}{Quantitäten und Berechnungen}{quantity_and_calc}
+\img[width=\relWidth{1}]{quantity/Ausschnitt_Quantity.pdf}{Klassendiagramm - Ausschnitt Quantitäten und Berechnungen}{quantity_and_calc}
 
 Die Addition, Subtraktion, Division und Multiplikation sind als Grundrechenarten (BasicCalculation) im Klassenmodell (s. Abbildung \refImg{quantity_and_calc} dargestellt. Man unterscheidet zwischen Grundrechenarten, die die Referenzen der Einheit verändern, und solchen, die dies nicht tun. Z.B. ergibt die Addition zweier Längenangaben (z.B. Meter) wieder eine Längenangabe. Also nennen wir eine solche Rechnung \emph{einheitstypbewahrend}. Im Klassenmodell ist diese Generalisierung als die Klasse \textit{UnitImutabCalc} zu erkennen. Im Gegensatz dazu ergibt z.B. die Multiplikation zweier Längenangaben eine Flächenangabe (z.B. Quadratmeter). Wir nennen diese Rechnungen \emph{einheitstypverändernd} - im Klassenmodell als \textit{UnitMutabCalc} zu sehen. Diese Implementierung besitzt Ansätze eines \emph{Kommando-Entwurfsmusters}.
 
