--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Objects.tex
@@ -9,7 +9,7 @@ Desweiteren wurde der Klasse die Methode \term{getProductType()} hinzugefügt, d
 Diese TypeConjunction repräsentiert die Produkttypen des Objekts, der implizit durch die Assoziation \term{types} dargestellt wird.
 
 \subsubsection{Löschen}
-Das Löschen von \term{Object}-Exemplaren funktioniert wie auch sonst im System über die Klasse \term{MModelItem}.
+Das Löschen von \term{Object}-Exemplaren funktioniert wie auch sonst im System über die Klasse \term{ModelItem}.
 Die Abhängigkeiten eines \term{Object}s sind hierbei 
 \begin{itemize}
 \item \term{Links} die entweder mit \term{source} oder \term{target} auf das Objekt zeigen,
